# lbr_med_stack

./: .gitignore  LICENSE  README.md  lbr_med_stack.repos  pyproject.toml
config/netplan/: 99-fri-x66.yaml
docs/: 01_fresh_machine_setup.md  02_network_setup.md  03_sunrise_side_setup.md  04_hardware_bringup_checklist.md
examples/goto_pose/: README.md  goto_pose.py
